--- a/Dates_and_temps/Dates_and_temps/Dates_and_temps.vcxproj.filters
+++ b/Dates_and_temps/Dates_and_temps/Dates_and_temps.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -26,5 +29,16 @@
     <ClCompile Include="Dates_and_temps.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="data.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ifile.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="ofile.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
